--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 plugins {
-    alias(libs.plugins.android.application)
+    id 'com.android.application' version '8.0.2'
 }
 
 android {
-    namespace 'pmf.rma.cityexplorerosm'
-    compileSdk 36
+    namespace "com.example.cityexplorer"
+    compileSdkVersion 33
 
     defaultConfig {
-        applicationId "pmf.rma.cityexplorerosm"
+        applicationId "com.example.cityexplorer"
         minSdk 26
-        targetSdk 36
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -22,23 +22,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.constraintlayout
-    implementation libs.navigation.fragment
-    implementation libs.navigation.ui
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    annotationProcessor 'androidx.room:room-compiler:2.5.2'
+    testImplementation 'androidx.room:room-testing:2.5.2'
 }
