--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Room Database
     implementation 'androidx.room:room-runtime:2.5.2'
     annotationProcessor 'androidx.room:room-compiler:2.5.2'
     testImplementation 'androidx.room:room-testing:2.5.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // OkHttp za network logove (debugging)
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
 }
