--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     // WorkManager
     implementation 'androidx.work:work-runtime:2.8.1'
+
+    // Maps
+    implementation 'org.osmdroid:osmdroid-android:6.1.16'
 }
