--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.CityExplorerOSM"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity android:name="pmf.rma.cityexplorerosm.ui.main.MainActivity"
             android:exported="true">
