--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
+        android:name="pmf.rma.cityexplorerosm.CityExplorerApp"
         android:allowBackup="true"
         android:label="CityExplorer OSM"
         android:icon="@mipmap/ic_launcher"
@@ -12,14 +19,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CityExplorerOSM"
         android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name="pmf.rma.cityexplorerosm.ui.main.MainActivity"
+        <activity
+            android:name="pmf.rma.cityexplorerosm.ui.map.MapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        
+
+        <activity
+            android:name="pmf.rma.cityexplorerosm.ui.detail.DetailActivity"
+            android:exported="false"
+            android:label="Detail Activity"
+            android:parentActivityName="pmf.rma.cityexplorerosm.ui.map.MapActivity">
+
+            <!-- Omogućava back navigaciju -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pmf.rma.cityexplorerosm.ui.map.MapActivity" />
+        </activity>
+
+
         <provider
             android:authorities="pmf.rma.cityexplorerosm.provider.favorites"
             android:name="pmf.rma.cityexplorerosm.provider.FavoritesProvider"
