--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,14 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+    plugins {
+        id 'com.android.application' version '8.0.2'
+        id 'com.android.library' version '8.0.2'
+        id 'org.jetbrains.kotlin.android' version '1.8.20'
+        id 'com.google.dagger.hilt.android' version '2.48'
+    }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -12,5 +19,6 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
+
 rootProject.name = "CityExplorerOSM"
 include ':app'
