Profile view and Points/Badges

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
                 android:value="pmf.rma.cityexplorerosm.ui.map.MapActivity" />
         </activity>
 
+        <activity
+            android:name="pmf.rma.cityexplorerosm.ui.profile.ProfileActivity"
+            android:exported="false"
+            android:label="@string/profile_title" />
 
         <provider
             android:authorities="pmf.rma.cityexplorerosm.provider.favorites"
