--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -44,6 +50,10 @@
             android:name="pmf.rma.cityexplorerosm.ui.profile.ProfileActivity"
             android:exported="false"
             android:label="@string/profile_title" />
+
+        <activity
+            android:name="pmf.rma.cityexplorerosm.ui.detail.QrScanActivity"
+            android:exported="false" />
 
         <provider
             android:authorities="pmf.rma.cityexplorerosm.provider.favorites"
