--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,12 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
     namespace "com.example.cityexplorer"
-    compileSdkVersion 33
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.example.cityexplorer"
@@ -82,4 +83,13 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
+    // Firebase Auth (preko BOM-a)
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
+    implementation 'com.google.firebase:firebase-auth'
+
+    // Fused Location (efikasno za GPS/dwell)
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    // EncryptedSharedPreferences za GDPR-friendly čuvanje tokena/consent-a
+    implementation 'androidx.security:security-crypto:1.0.0'
 }
