--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ pluginManagement {
         id 'com.android.library' version '8.0.2'
         id 'org.jetbrains.kotlin.android' version '1.8.20'
         id 'com.google.dagger.hilt.android' version '2.48'
+        id 'com.google.gms.google-services' version '4.4.2'
     }
 }
 
