--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,13 @@ dependencies {
 
     // EncryptedSharedPreferences za GDPR-friendly čuvanje tokena/consent-a
     implementation 'androidx.security:security-crypto:1.0.0'
+
+    // Firebase Messaging for FCM push notifications
+    implementation 'com.google.firebase:firebase-messaging'
+
+    // Hilt WorkManager
+    implementation 'androidx.hilt:hilt-work:1.2.0'
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.2.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 }
