--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,6 @@ dependencies {
     annotationProcessor 'androidx.hilt:hilt-compiler:1.2.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
